# curriculumagent

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  Dockerfile  MANIFEST.in  NOTES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  tag.yml
curriculumagent/: __about__.py  __init__.py  _version.py
curriculumagent/action_space/new/: actions208_both.npy  actionspace_nminus1_250.npy
curriculumagent/baseline/: __init__.py  baseline.py  baselineagent.py
curriculumagent/common/: obs_converter.py  score_agent.py  utilities.py
curriculumagent/data/: all_unitary_actions.npz  all_unitary_actions_not16.npz  best_tuple_actions.npz  best_unitary_actions.npz  best_unitary_actions300.npz
curriculumagent/junior/: __init__.py  junior_student.py  junior_student_pytorch.py  junior_student_tensorflow.py  torch_datasets.py
curriculumagent/junior/hyper_parameter_search/: advanced_junior_student.py  config.yml  hp_search_junior_nni.py  hp_search_junior_tune.py  hyper_parameter_search_junior.py  search_space.json
curriculumagent/jupyter_notebooks/: Junior.ipynb
curriculumagent/scripts/: get_seed_wcci2022.py  run_rllib_with_advanced_model.py  score_agent.py
curriculumagent/senior/: __init__.py  senior_student.py  senior_student_advanced.py  senior_student_rllib.py
curriculumagent/senior/JuniorModel/: keras_metadata.pb
curriculumagent/senior/openai_execution/: ppo.py  ppo_environment.py  ppo_reward.py
curriculumagent/senior/rllib_execution/: alternative_rewards.py  convert_rllib_ckpt.py  senior_env_rllib.py  senior_model_rllib.py
curriculumagent/submission/: binbinchen_saveload_investigation.py  my_agent.py  my_agent_advanced.py  my_agent_savestate_rosalie.py  obs_converter.py  utilities.py
curriculumagent/teacher/: __init__.py  collect_teacher_experience.py  teacher.py
curriculumagent/teacher/submodule/: common.py  encoded_action.py  topology_action_search.py
curriculumagent/teacher/teachers/: teacher1.py  teacher2.py  teacher_n_minus_1.py  teacher_sequential_actions.py  tuple_triple_teacher.py
curriculumagent/tutor/: __init__.py  collect_divergent_powerflow.py  collect_tutor_experience.py  tutor.py  tutor_topology.py
curriculumagent/tutor/tutors/: general_tutor.py  (+2 more)
docs/: Makefile  baseline.rst  changelog.rst  conf.py  index.rst  overview.rst  requirements.txt
docs/_static/: report.txt
docs/agents/: junior.rst  senior.rst  teacher.rst  tutor.rst
jupyter_notebooks/: 01Teacher.ipynb  02Tutor.ipynb  03Junior.ipynb  04JuniorWithOptimalParam.ipynb  05Senior.ipynb  JuniorHyperparameter.ipynb  Senior.ipynb  Teacher.ipynb  Tutor.ipynb  junior_best_params.json
jupyter_notebooks/data/: actionspace_nminus1.npy  actionspace_tuples.npy  scaler_junior.pkl
paper_data_FD4AiPGTO/: README.md
paper_data_FD4AiPGTO/data_gen/: get_seed_ecml.py  seeds_ecml.sh
paper_data_FD4AiPGTO/models/: agent_res.txt  cluster_res.txt  dataset_colnames.npy  xg_best_new.pkl
paper_data_FD4AiPGTO/notebooks_&_scripts/: CEMC_pytorch.ipynb  ECML Data Gen.ipynb  GANDALF_pytorch.ipynb  Metrics.ipynb  cemc_final_metrics.py  cemc_hyperparam.py  gandalf_final_metrics.py  gandalf_hyperparam.py  lightgbm.ipynb  lightgbm_hyperparam.py  rf_hyperparam.py  xg_hyperparam.py  xgboost_training.ipynb
paper_data_HUGO/: README.md  paper_agents.py
paper_data_HUGO/evaluation/: Hugo Results and Plots.ipynb  computation_time.pkl  res.pkl
paper_data_HUGO/files/: best_params.json  res.pkl  scaler_junior.pkl  topologies_only.npy
paper_data_HUGO/scripts/: get_seed_hugo_parallel2.py  seeds_hugo2.sh
paper_data_MPGTTA/: Code for paper.ipynb  README.md  best_params.json  collect_survival_time.pkl  report.md  seed_res.pkl
paper_data_MPGTTA/action_spaces_paper/: n-1_actions.npy
paper_data_MPGTTA/checkpoint/: events.out.tfevents.1671012493.compute-gpu-0-4.local  saved_model.pb
paper_data_MPGTTA/scripts_paper/: config.yml  get_seed_new.py  hps_junior_nni.py  run_teacher_n1.py  run_tutor_N-1_topo.py  scaler_junior.pkl
tests/: __init__.py  conftest.py  pytest.ini
tests/data/: rlagent_unitary_actions.npy  scaler_junior.pkl  tutor_gold_sample.pkl.xz
tests/test_baseline/: test_baselineagent.py  test_evaluate.py  test_train.py
tests/test_common/: test_obs_converter.py  test_score_agent.py  test_utilities.py
tests/test_junior/: test_hyper_param.py  test_junior.py  test_juniorTF.py  test_juniorTorch.py
tests/test_senior/: test_convert_ckpt_rllib.py  test_imports.py  test_rllib_execution.py  test_senior_env_rllib.py  test_senior_model.py  test_senior_model_TF.py  test_senior_model_Torch.py  test_senior_student.py  test_toporew.py
tests/test_submission/: test_my_agent.py  test_my_agent_advanced.py
tests/test_teacher/: test_encoded_actions.py  test_teacher_common.py  test_teacher_n_minus_1.py  test_teacher_sequential.py  test_tuple_teacher.py
tests/test_tutor/: test_collect_tutor_exp.py  test_tutor_general.py  test_tutor_n1.py  test_tutor_original.py  test_tutor_topology.py
(+459 files in other folders)
