[build-system]
requires = [
    "setuptools >= 42", # At least v42 of setuptools required!
    "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "curriculumagent"
dynamic = ["version"]
authors = [
    { name = "Malte Lehna", email = "malte.lehna@iee.fraunhofer.de" },
]
description = "CurriculumAgent is a Reinforcement Learning Agent designed to learn from and act within the Grid2Op Environments."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "grid2op==1.7.1",
    "numpy==1.21.0",
    "numba~=0.55.1",
    "scipy>=1.6.0",
    "pandas>=1.3.0",
    "pandapower>=2.8.0",
    "tqdm>=4.62.2",
    "LightSim2Grid>=0.6.0",
    "ubelt~=0.10.1",
    "ray==1.10.0",
    "ray[tune]==1.10.0",
    "ray[rllib]==1.10.0",
    "tensorflow==2.7.0",
    "gym==0.21.0",
    "defopt==6.1.0",
    "nni",
    "grpcio==1.43",
    "l2rpn_baselines",
    "sklearn",
]


[tool.setuptools]
packages = ['curriculumagent']

[project.urls]
"Homepage" = "https://github.com/FraunhoferIEE/curriculumagent"
"Bug Tracker" = "https://github.com/FraunhoferIEE/curriculumagent/issues"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name

# Parameters to pass to the method:
match = ["v*"]
default-tag = "0.1.0"

