[metadata]
name= curriculumagent
version attr: curriculumagent.VERSION
description = CurriculumAgent is a Reinforcement Learning Agent designed to learn from and act within the Grid2Op
Environments.
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = curriculumagent